Refactor settings package structure and add new configuration options